2022-09-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: small changes in the docs.

2022-09-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-edit.el (ee-preceding-tag-flash): new function.
	(ee-copy-preceding-tag-to-kill-ring): use
	`ee-preceding-tag-flash'.

	* eev-kla.el: totally rewritten.

2022-09-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-ecolor-links): added (read-color).

2022-09-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-debpkg-links): small changes.

2022-09-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-eshortdoc-re): new variable.
	(ee-eshortdoc-bufferp): new function.
	(ee-find-eshortdoc-links): new function.
	(ee-fhl-main-program): added an entry for shortdoc.

	* eev-blinks.el (find-eshortdoc): new function.

2022-08-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el: rewritten completely.

2022-08-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-load.el: added a (require 'eev-rstdoc).

2022-08-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eepitch-intro): added the section "2.6.
	`find-vtermprocess'".

	* eepitch.el (eepitch-isympy): new function.

2022-08-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-video-links-intro): rewrote the section "5.1.
	Subtitles".

2022-08-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el: new file.

2022-08-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-angg-not-configured)
	(find-es-not-configured): new functions.

2022-08-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-slyprocess, eepitch-sly): new functions.

2022-06-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kla-demo-write-file)
	(ee-kla-demo-write-three-files, eekla2): new functions.

	* eev-intro.el (find-kla-test-intro): New function.

2022-06-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-copy-rest00): new function.
	(ee-copy-rest0): use `ee-copy-rest00'.
